SwerveMainTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/FRC%20Programmers/Desktop/FRC%20Programs/SwerveMainTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling SwerveModule.cpp failed.
C:\Users\FRC Programmers\Desktop\FRC Programs\SwerveMainTest\src\main\cpp\SwerveModule.cpp: In member function 'void SwerveModule::SetDesiredState(const frc::SwerveModuleState&)':
C:\Users\FRC Programmers\Desktop\FRC Programs\SwerveMainTest\src\main\cpp\SwerveModule.cpp:51:63: error: cannot convert 'frc::Rotation2d::Radians' from type 'units::angle::radian_t (frc::Rotation2d::)() const {aka units::unit_t<units::unit<std::ratio<1>, units::base_unit<std::ratio<0, 1>, std::ratio<0, 1>, std::ratio<0, 1>, std::ratio<1> > > > (frc::Rotation2d::)() const}' to type 'double'
   m_turnPIDController.SetReference(double {state.angle.Radians}, rev::ControlType::kVelocity);
                                                               ^

compiling Robot.cpp failed.
In file included from C:\Users\FRC Programmers\.gradle\caches\transforms-2\files-2.1\c8e850653c2afd60a8151f1bf737926e\wpilibc-cpp-2020.3.2-headers/frc2/Timer.h:10:0,
                 from C:\Users\FRC Programmers\.gradle\caches\transforms-2\files-2.1\c8e850653c2afd60a8151f1bf737926e\wpilibc-cpp-2020.3.2-headers/frc/SlewRateLimiter.h:10,
                 from C:\Users\FRC Programmers\Desktop\FRC Programs\SwerveMainTest\src\main\cpp\Robot.cpp:8:
C:\Users\FRC Programmers\.gradle\caches\transforms-2\files-2.1\d7b3e15668f704aa3914238843a0806f\wpiutil-cpp-2020.3.2-headers/units/units.h: In instantiation of 'constexpr T units::convert(const T&) [with UnitFrom = units::unit<std::ratio<1>, units::base_unit<> >; UnitTo = units::unit<std::ratio<1>, units::base_unit<std::ratio<1>, std::ratio<0, 1>, std::ratio<-1> > >; T = double]':
C:\Users\FRC Programmers\.gradle\caches\transforms-2\files-2.1\d7b3e15668f704aa3914238843a0806f\wpiutil-cpp-2020.3.2-headers/units/units.h:1956:41:   required from 'constexpr units::unit_t<Units, T, NonLinearScale>::unit_t(const units::unit_t<UnitsRhs, Ty, NlsRhs>&) [with UnitsRhs = units::unit<std::ratio<1>, units::base_unit<> >; Ty = double; NlsRhs = units::linear_scale; Units = units::unit<std::ratio<1>, units::base_unit<std::ratio<1>, std::ratio<0, 1>, std::ratio<-1> > >; T = double; NonLinearScale = units::linear_scale]'
C:\Users\FRC Programmers\Desktop\FRC Programs\SwerveMainTest\src\main\cpp\Robot.cpp:51:54:   required from here
C:\Users\FRC Programmers\.gradle\caches\transforms-2\files-2.1\d7b3e15668f704aa3914238843a0806f\wpiutil-cpp-2020.3.2-headers/units/units.h:1620:3: error: static assertion failed: Units are not compatible.
   static_assert(traits::is_convertible_unit<UnitFrom, UnitTo>::value, "Units are not compatible.");
   ^~~~~~~~~~~~~

compiling Drivetrain.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/FRC%20Programmers/Desktop/FRC%20Programs/SwerveMainTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
